added one heading and one css file

--- a/new_file.html
+++ b/new_file.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Repo</title>
+    <link rel="stylesheet" href="new_file.css">
 </head>
 <body>
-    
+    <h1>My self Mohammed Imran Khan</h1>
 </body>
 </html>
