new heading added

--- a/new_file.html
+++ b/new_file.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>My self Mohammed Imran Khan</h1>
+    <h2>I am a full stack developer with Mern technologies</h2>
 </body>
 </html>
