--- a/new_file.html
+++ b/new_file.html
@@ -9,5 +9,10 @@
 <body>
     <h1>My self Mohammed Imran Khan</h1>
     <h2>I am a full stack developer with Mern technologies</h2>
+    <select >
+        <option value="one">one</option>
+        <option value="two">two</option>
+        <option value="three">three</option>
+    </select>
 </body>
 </html>
